--- a/_includes/portfolio_grid.html
+++ b/_includes/portfolio_grid.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Portfolio</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Contents</h2>
+                    <h3 class="section-subheading text-muted">Browse news on the future and reflections on the past. Whatever you're looking for. If it's tech, it's here. </h3>
                 </div>
             </div>
             <div class="row">
