major revision to content section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,8 +3,8 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">Tech Through Time</h2>
+                    <h3 class="section-subheading text-muted">History's most important innovations for the average person.</h3>
                 </div>
             </div>
             <div class="row">
@@ -16,11 +16,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>2009-2011</h4>
-                                    <h4 class="subheading">Our Humble Beginnings</h4>
+                                    <h4>3500 BC</h4>
+                                    <h4 class="subheading">The Wheel</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">The Wheel was a major invontion. It simplified moving heavy loads, and enabled many of the great feats of humanity. The wheel was such a foundational technology that it is still in common use today.</p>
                                 </div>
                             </div>
                         </li>
@@ -30,11 +30,11 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>March 2011</h4>
-                                    <h4 class="subheading">An Agency is Born</h4>
+                                    <h4>date unknown</h4>
+                                    <h4 class="subheading">Paper</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">Another simple yet revolutionary technology. Paper was the invention that enabled ideas to be shared with many people and preserved over many years. In societies around the world, the quality of paper had a huge impact on the progress of technology and society. Without it, society as we know it would not exist.  </p>
                                 </div>
                             </div>
                         </li>
@@ -68,9 +68,9 @@
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <h4>Be Part
-                                    <br>Of Our
-                                    <br>Story!</h4>
+                                <h4>The
+                                    <br>Future
+                                    <br>Continues!</h4>
                             </div>
                         </li>
                     </ul>
