--- a/_includes/team.html
+++ b/_includes/team.html
@@ -30,7 +30,7 @@
             </div>
             <div class="row">
                 <div class="col-lg-8 col-lg-offset-2 text-center">
-                    <p class="large text-muted">NOTE: this is not a real company, all material on this website was created for the purpose of this priject, and does not reflect real events.</p>
+                    <p class="large text-muted">NOTE: this is not a real company, all material on this website was created for the purpose of this project, and does not reflect real events.</p>
                 </div>
             </div>
         </div>
