Added Images, and chaged about section

--- a/_includes/about.html
+++ b/_includes/about.html
@@ -12,29 +12,124 @@
                     <ul class="timeline">
                         <li>
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/1.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/Farming.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>3500 BC</h4>
-                                    <h4 class="subheading">The Wheel</h4>
+                                    <h4></h4>
+                                    <h4 class="subheading">Farming</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">The Wheel was a major invontion. It simplified moving heavy loads, and enabled many of the great feats of humanity. The wheel was such a foundational technology that it is still in common use today.</p>
+                                    <p class="text-muted">Farming marked the transition of humans from nomadic hunter-gatherers to the first ancient civilizations. It created the foundation needed for cultures around the world to thrive.</p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/2.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/Ancient_Wheel.png" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>date unknown</h4>
+                                    <h4></h4>
+                                    <h4 class="subheading">The Wheel</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted"> The Wheel was a major invontion. It simplified moving heavy loads, and enabled many of the great feats of humanity. The wheel was such a foundational technology that it is still in common use today.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/earlypaper.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4></h4>
                                     <h4 class="subheading">Paper</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Another simple yet revolutionary technology. Paper was the invention that enabled ideas to be shared with many people and preserved over many years. In societies around the world, the quality of paper had a huge impact on the progress of technology and society. Without it, society as we know it would not exist.  </p>
+                                    <p class="text-muted"> Another simple yet revolutionary technology. Paper was the invention that enabled ideas to be shared with many people and preserved over many years. In societies around the world, the quality of paper had a huge impact on the progress of technology and society. Without it, society as we know it would not exist.</p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/Metalworking.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4></h4>
+                                    <h4 class="subheading"> Metalworking </h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        From bronze to iron, even to steel, the knowledge of metalworking enabled the creation of tools that greatly increased the productivity, and quality of life of people using them.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <!-- this is where the new entries were added-->
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/Printing_Press.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4></h4>
+                                    <h4 class="subheading">The Printing Press</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        If paper enabled the sharing of knowledge, the printing press made it popular. With a cheap way to mass produce books, and other text, the literacy of the world’s civilizations rose dramatically. The rise in the number of people able to participate in the sharing of knowledge led to a corresponding increase in the rate of innovation, and the level of general education.
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/Steam_Engine.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4></h4>
+                                    <h4 class="subheading">The Steam Engine</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        The steam engine truly started the industrial revolution. The trains it fueled provided a transportation infrastructure on a level impossible before. The machinery it powered enabled the most labor intensive, manual tasks to be done faster and more consistently. The cost of goods dropped, and the average person could afford things they previously wouldn’t have been able to.                                     
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li>
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/lightbulb2.jpg" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4></h4>
+                                    <h4 class="subheading">Electricity</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        Building off the back of the steam engine, widespread electricity paved the way for many of the modern appliances, and household conveniences we use today. It also made possible the Radio, and the Computer
+                                    </p>
+                                </div>
+                            </div>
+                        </li>
+                        <li class="timeline-inverted">
+                            <div class="timeline-image">
+                                <img class="img-circle img-responsive" src="img/about/old-radio.png" alt="">
+                            </div>
+                            <div class="timeline-panel">
+                                <div class="timeline-heading">
+                                    <h4></h4>
+                                    <h4 class="subheading">Radio/Telegraph</h4>
+                                </div>
+                                <div class="timeline-body">
+                                    <p class="text-muted">
+                                        The ability to communicate quickly and effectively is important in almost all tasks. The radio removed distance as a factor in communication. It had the effect of making the world a lot smaller for the nations inhabiting it. The radio was the first step towards the global society we live in today
+                                    </p>
                                 </div>
                             </div>
                         </li>
@@ -44,28 +139,33 @@
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>December 2012</h4>
-                                    <h4 class="subheading">Transition to Full Service</h4>
+                                    <h4></h4>
+                                    <h4 class="subheading">Computers</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+                                        The Computer did for intellectual tasks what the Industrial revolution did for manual ones. Computers automated most repetitive or simple decision making tasks, and  they continue to power most of the major breakthroughs and changes in today’s society
+                                    </p>
                                 </div>
                             </div>
                         </li>
                         <li class="timeline-inverted">
                             <div class="timeline-image">
-                                <img class="img-circle img-responsive" src="img/about/4.jpg" alt="">
+                                <img class="img-circle img-responsive" src="img/about/smartphones.jpg" alt="">
                             </div>
                             <div class="timeline-panel">
                                 <div class="timeline-heading">
-                                    <h4>July 2014</h4>
-                                    <h4 class="subheading">Phase Two Expansion</h4>
+                                    <h4></h4>
+                                    <h4 class="subheading">Internet/Smartphone/PC</h4>
                                 </div>
                                 <div class="timeline-body">
-                                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sunt ut voluptatum eius sapiente, totam reiciendis temporibus qui quibusdam, recusandae sit vero unde, sed, incidunt et ea quo dolore laudantium consectetur!</p>
+                                    <p class="text-muted">
+                                        These three technologies took the power of computers, and put them in the hands of everyone who wanted them. Not only that, they changed the way we communicate with each other. The pace of communication, and the integration of technology and communication with daily life has increased dramatically. It’s hard to imagine modern life without these things, and there are many people who would find it difficult to function in their daily life without the use of a phone or laptop.
+                                    </p>
                                 </div>
                             </div>
                         </li>
+                            <!-- this is where the new entries end-->
                         <li class="timeline-inverted">
                             <div class="timeline-image">
                                 <h4>The
