--- a/_includes/services.html
+++ b/_includes/services.html
@@ -3,8 +3,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading">About Future Tech</h2>
+                    <p class="text-muted">Future Tech is dedicated to the cutting edge of technology. Our team works to bring you the latest news, the greatest gadgets, and the smartest advice on everything tech. Our sute is updated regularly with content ranging across a few general categories: </p>
+                    <br>
                 </div>
             </div>
             <div class="row text-center">
@@ -13,24 +14,24 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Consumer Electronics</h4>
+                    <p class="text-muted"> Our consumer electronics section gives you our opinions on the latest phones, laptops, and other acessories out on the market. </p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Tech News</h4>
+                    <p class="text-muted"> Get the latest news from the tech world about theoretical advances, buisness ventures, and more.</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Expert Opinions</h4>
+                    <p class="text-muted"> The Future Tech team looks high and low to find experts and advice about topics in technology, so you always have a place to go for all your burning tech questions. </p>
                 </div>
             </div>
         </div>
