--- a/_includes/services.html
+++ b/_includes/services.html
@@ -4,7 +4,7 @@
             <div class="row">
                 <div class="col-lg-12 text-center">
                     <h2 class="section-heading">About Future Tech</h2>
-                    <p class="text-muted">Future Tech is dedicated to the cutting edge of technology. Our team works to bring you the latest news, the greatest gadgets, and the smartest advice on everything tech. Our sute is updated regularly with content ranging across a few general categories: </p>
+                    <p class="text-muted">Future Tech is a website dedicated to the cutting edge of technology. Our team works to bring you the latest news, the greatest gadgets, and the smartest advice on everything tech. Our sute is updated regularly with content ranging across a few general categories: </p>
                     <br>
                 </div>
             </div>
